--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
   </div>
   <div class="middle-container">
     <div class="profile">
-      <img class="myphoto" src="images/Nick_Photo.jpg" alt="Nicholas Chiodo">
+      <img class="myphoto" src="images/Nick_Photo.png" alt="Nicholas Chiodo">
       <h2>Hello.</h2>
-      <p class="about">I am currently a technical Customer Success Manager with Support Engineer experience looking to pursue a career in web development.</p>
+      <p class="about">Thank you for visiting my website! My name is Nick and for as long as I can remember I have been obsessed with technology and the impact it can have on people’s lives. Throughout my career I have gained many skills across different technological areas and continue to pursue my dream of becoming a full stack web developer!</p>
     </div>
     <hr>
     <div class="skills">
@@ -46,8 +46,61 @@
       </div>
     </div>
     <hr>
+    <div class="work-experience">
+      <h2>Work Experience.</h2>
+      <div class="work-row">
+        <img class="workato" src="images/workato.png" alt="workato">
+        <ul>
+          <li><h3>Workato - Customer Success Manager: 2022 - Present</h3></li>
+            <ul class="indent">
+              <li>Create spaces for excited customers to collaborate on successes and possibilities around Workato such as customer advisory boards, happy hours, and go-live celebrations</li>
+              <li>Work with Workato Institute and Workato Marketing teams to create fun and engaging training resources that scale</li>
+              <li>Work with Workato Marketing and Sales Development on expansion and save plays</li>
+              <li>Leverage usage data to target my activities</li>
+              <li>Organize product-centric office hours where I provide technical assistance to customers</li>
+              <li>Brainstorm unexpected automation opportunities that delight customers</li>
+              <li>Gather and provide insights to the Workato Product team</li>
+            </ul>
+        </ul>
+        <div class="work-row1">
+          <img class="tibco" src="images/tibco.png" alt="tibco">
+          <ul>
+            <li><h3>TIBCO - Sr. Support Engineer: 2018 - 2022</h3></li>
+              <ul class="indent">
+                <li>Supported customers TIBCO Scribe Online and TIBCO Scribe Insight product software</li>
+                <li>Managed incoming cases via Phone and Salesforce</li>
+                <li>Utilized Zoom and RDP sessions to troubleshoot and resolve customer issues</li>
+                <li>Managed escalated/new accounts, creating action plans for the customer, and coordinating all parties</li>
+                <li>Logged defects via JIRA and create knowledge base articles to be used by customers/team members</li>
+                <li>Maintained a customer satisfaction score of 9.5 out of 10</li>
+                <li>Developed new higher training plan for position</li>
+                <li>Assisted in training new hires</li>
+                <li>Crossed-train other experienced Support Engineers on TIBCO Scribe Products</li>
+                <li>Created reports and dashboards in Salesforce and Spotfire to help management in monitoring metrics</li>
+                <li>Developed troubleshooting guides and presented them to the team</li>
+                <li>Selected by the Engineering/Development team to be trained on the backend C# code for Scribe Online Product</li>
+                <li>Team expert in NetSuite, Business Central and REST Web Services</li>
+              </ul>
+          </ul>
+      </div>
+    </div>
+    <hr>
+    <div class="education">
+      <h2>Education.</h2>
+      <div class="education-row">
+        <img class="unh" src="images/unh.jpg" alt="unh">
+        <ul>
+          <li><h3>University of New Hampshire: Peter T. Paul College of Business and Economics: 2017</h3></li>
+            <ul class="indent">
+              <li>Bachelors Degree: Information Systems and Business Analytics</li>
+              <li>Associate Degree: Applied Business Management: Thompson School of Applied Science</li>
+            </ul>
+        </ul>
+      </div>
+    </div>
+    <hr>
     <div class="contact-me">
-      <h2>Get In Touch</h2>
+      <h2>Get In Touch.</h2>
       <h3 class="contact-message">If you are interested in my profile, lets talk!</h3>
       <a class="btn" href="mailto:nicholas.chiodo2@gmail.com">CONTACT ME</a>
     </div>
